[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Upgrades.gd" type="Script" id=2]

[node name="Upgrades" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="OuterContainer" type="GridContainer" parent="CanvasLayer"]
anchor_left = 0.25
anchor_top = 0.12
anchor_right = 0.75
anchor_bottom = 0.85
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Infantry" type="MarginContainer" parent="CanvasLayer/OuterContainer"]
margin_right = 254.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/OuterContainer/Infantry"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Content" type="MarginContainer" parent="CanvasLayer/OuterContainer/Infantry"]
margin_right = 254.0
margin_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/OuterContainer/Infantry/Content"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CanvasLayer/OuterContainer/Infantry/Content/VBoxContainer"]
margin_left = 102.0
margin_right = 151.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Infantry"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/OuterContainer/Infantry/Content/VBoxContainer"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfantryList" type="ItemList" parent="CanvasLayer/OuterContainer/Infantry/Content/VBoxContainer/HBoxContainer"]
margin_right = 254.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Ranged" type="MarginContainer" parent="CanvasLayer/OuterContainer"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/OuterContainer/Ranged"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Content" type="MarginContainer" parent="CanvasLayer/OuterContainer/Ranged"]
margin_right = 254.0
margin_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/OuterContainer/Ranged/Content"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CanvasLayer/OuterContainer/Ranged/Content/VBoxContainer"]
margin_left = 104.0
margin_right = 150.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Ranged"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/OuterContainer/Ranged/Content/VBoxContainer"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RangedList" type="ItemList" parent="CanvasLayer/OuterContainer/Ranged/Content/VBoxContainer/HBoxContainer"]
margin_right = 254.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Mounted" type="MarginContainer" parent="CanvasLayer/OuterContainer"]
margin_top = 221.0
margin_right = 254.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/OuterContainer/Mounted"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Content" type="MarginContainer" parent="CanvasLayer/OuterContainer/Mounted"]
margin_right = 254.0
margin_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/OuterContainer/Mounted/Content"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CanvasLayer/OuterContainer/Mounted/Content/VBoxContainer"]
margin_left = 98.0
margin_right = 155.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Mounted"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/OuterContainer/Mounted/Content/VBoxContainer"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MountedList" type="ItemList" parent="CanvasLayer/OuterContainer/Mounted/Content/VBoxContainer/HBoxContainer"]
margin_right = 254.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Siege" type="MarginContainer" parent="CanvasLayer/OuterContainer"]
margin_left = 258.0
margin_top = 221.0
margin_right = 512.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CanvasLayer/OuterContainer/Siege"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Content" type="MarginContainer" parent="CanvasLayer/OuterContainer/Siege"]
margin_right = 254.0
margin_bottom = 217.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/OuterContainer/Siege/Content"]
margin_right = 254.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="CanvasLayer/OuterContainer/Siege/Content/VBoxContainer"]
margin_left = 110.0
margin_right = 144.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Siege"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/OuterContainer/Siege/Content/VBoxContainer"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SiegeList" type="ItemList" parent="CanvasLayer/OuterContainer/Siege/Content/VBoxContainer/HBoxContainer"]
margin_right = 254.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true
